SERVER-50891 alow opCtx's to be created without globalStorageEngines

o It's required that one be able to create opCtx's without
  globalStorageEngines. When the globalStorageEngine fails to get properly
  initialized, the process will shutdown. Shutdown tasks will then need to
  be able to create and use opCtx's