src/mongo/db/operation_context.h
@@ -94,6 +94,7 @@ public:
      * Interface for durability.  Caller DOES NOT own pointer.
      */
     RecoveryUnit* recoveryUnit() const {
+        invariant(_recoveryUnit);
         return _recoveryUnit.get();
     }
 
@@ -123,6 +124,7 @@ public:
      * Interface for locking.  Caller DOES NOT own pointer.
      */
     Locker* lockState() const {
+        invariant(_locker);
         return _locker.get();
     }
 
